<resources>
    <string name="app_name">PinkBird</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome_text">Welcome to PinkBird</string>
    <string name="GetStarted">Get Started</string>
    <string name="Step1">step 1 out of 3</string>
    <string name="next">Next</string>
    <string name="Step2">step 2 out of 3</string>
    <string name="Step1_text">On average, how long is your period?</string>
    <string name="Step2_text">On average, how long is your cycle?</string>
    <string name="Step3_text">When did your last period start?</string>
    <string name="Step3">step 3 out of 3</string>
    <string name="action_setting">Setting</string>
    <string name="action_calenda">Calenda</string>
    <string name="action_home">Home</string>
    <string name="savePeriod_btn">Save Period</string>
    <string name="Notifivation_text">เริ่มมีประจำเดือน</string>
    <string name="Date_noti">ตารางเวลา</string>
    <string name="time_noti">เวลา</string>
    <string name="message_noti">ข้อความ</string>
    <string name="DatePeriod_text">12 วัน</string>
    <string name="status">ประจำเดือนใน</string>
    <string name="date_text">9 October 2019</string>
</resources>
