<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="buu.informatics.s59160134.pinkbird.StartStepTwoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/Step2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="14sp" android:textStyle="normal"/>
        <Button
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_btn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@string/Step2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/step1_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="8dp" android:textSize="18sp"/>
        <NumberPicker
                android:id="@+id/numberPickerStep2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/next_btn"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>